fix body of card being visible issue for mobile view

--- a/client/src/styles/components/_card.scss
+++ b/client/src/styles/components/_card.scss
@@ -28,7 +28,7 @@ $baseclass: 'card';
   }
 
   &__body {
-    padding-top: 0;
+    padding-top: 100;
     padding-bottom: 0;
     border-top: 0;
     border-radius: 0;
@@ -262,6 +262,7 @@ $baseclass: 'card';
   &--open {
     .#{$baseclass}__body {
       max-height: 1500px;
+      padding-top: 0;
     }
     .#{$baseclass}__open-button {
       transform: rotate(-45deg);
